fixed, but not on small devices

--- a/2_2_blank_boostrap_site/css/slide.css
+++ b/2_2_blank_boostrap_site/css/slide.css
@@ -38,13 +38,19 @@ a:hover {
     font-weight: bold;
 }
 
+.slides {
+    display: none;
+}
+
 img {
     vertical-align: middle;
     border-radius: 8px;
 }
 
-.container {
+.slideshow-container {
+    max-width: 400px;
     position: relative;
+    margin: auto;
 }
 
 .prev, .next {
@@ -55,23 +61,20 @@ img {
     padding: 16px;
     margin-top: -22px;
     color: #060606;
+    font-size: 18px;
     font-weight: bold;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
     user-select: none;
-    -webkit-user-select: none;
-}
-
-.slideshow-container {
-    max-width: 400px;
-    position: relative;
-    margin: auto;
-}
-
-.prev:hover, .next:hover {
-    background-color: #f2f2f2;
+    user-select: none;
 }
 
 .next {
     right: 0;
+}
+
+.prev:hover, .next:hover {
+    background-color: #f2f2f2;
 }
 
 /* Number text (1/3 etc) */
